# polars-extensions

./: .buildinfo  .gitignore  Cargo.toml  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  usage.ipynb
.doctrees/: environment.pickle  index.doctree
.doctrees/reference/api/: index.doctree
.doctrees/reference/api/dataframe/: index.doctree  name_ext.doctree  technical_analysis_ext.doctree
.doctrees/reference/getting_started/: index.doctree
.github/workflows/: docs.yml  pytest.yml  python-publish.yml  testing.yml
_sources/reference/api/: index.rst.txt
_static/: documentation_options.js
datasets/: employees.csv  ns-water-basin_poly-wkb.arrow  string_sim.csv
docs/: readme.md  requirements-docs.txt
docs/source/: conf.py  index.rst
polars_extensions/: __init__.py  io.py  name.py  numeric.py  string.py  technical_analysis.py  units.py  url.py  xml.py
polars_extensions/mssql/: writer.py
polars_extensions/polars_extensions.egg-info/: PKG-INFO
polars_extensions/tsql/: types.py  writer.py
reference/api/: index.html
reference/api/dataframe/: index.html  name_ext.html  technical_analysis_ext.html
reference/api/expressions/: bio_ext.html  geo_ext.html  index.html  num_ext.html  numeric._ext.html  str_ext.html  units_ext.html  url_ext.html
reference/api/geo/: index.html
reference/api/io/: index.html
reference/getting_started/: index.html
src/: io.rs  lib.rs  name.rs  numeric.rs
tests/: test_io.py  test_name.py  test_numeric.py  test_units.py
(+27 files in other folders)
