[package]
name = "polars-extensions-rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "_name_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py38"] }

[package.metadata.maturin]
module-name = "polars_extensions._name_rust"

[profile.release]
lto = true
codegen-units = 1
