[package]
name = "polars-extensions-rust"
version = "1.5.0-alpha"
edition = "2021"

[lib]
name = "_name_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py38"] }
serde_json = "1"
xmltree = "0.11"

[package.metadata.maturin]
module-name = "polars_extensions._name_rust"

[profile.release]
lto = true
codegen-units = 1
