[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "polars-extensions"

dynamic = ["version"]
description = "The Library of Polars Extensions"
readme = "README.md"
authors = [
    {name = "Jayden Rasband", email = "jayden.rasband@gmail.com"}
]
license = {text = "MIT"}
classifiers = []
dependencies = [
    "polars",
    "defusedxml",
    "pyodbc",
    "tqdm"
]


[project.urls]
"Source" = "https://github.com/jrasband-dev/polars-extensions"
"Documentation" = "https://jrasband-dev.github.io/polars-extensions/"

[tool.maturin]
module-name = "polars_extensions._name_rust"
python-source = "."
